AUTOMAKE_OPTIONS = foreign

EXTRA_SRC = event2/buffer.h event2/thread.h event2/bufferevent.h \
        event2/bufferevent_struct.h event2/event.h event2/event_compat.h \
        event2/event_struct.h event2/tag.h event2/util.h

nobase_include_HEADERS = \
        event2/buffer.h event2/thread.h event2/bufferevent.h \
        event2/bufferevent_struct.h event2/event.h event2/event_compat.h \
        event2/event_struct.h event2/tag.h event2/util.h
